完善评论模块和部署完成

--- a/blog-client/src/components/Common/Footer/Footer.module.scss
+++ b/blog-client/src/components/Common/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
-.yancey_common_footer {
+.kk_common_footer {
   font-family: "Ubuntu", sans-serif;
   padding: 1.8rem 0;
   letter-spacing: .025rem;
