--- a/blog-client/src/containers/Music/Music.module.scss
+++ b/blog-client/src/containers/Music/Music.module.scss
@@ -180,10 +180,10 @@ $slider_height: 25.8rem;
 }
 
 // part 3
-.yancey_music_container {
+.kk_music_container {
   width: 72rem;
   margin: 0 auto;
-  .yancey_music_list {
+  .kk_music_list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
