增加了播放器和动态配置首页大图

--- a/blog-client/src/containers/Home/Home.module.scss
+++ b/blog-client/src/containers/Home/Home.module.scss
@@ -15,7 +15,7 @@
     transition: 1s opacity linear;
     &::after {
       content: '';
-      background: url('../../assets/images/dot.gif') 0 0 fixed;
+      // background: url('../../assets/images/dot.gif') 0 0 fixed;
       position: absolute;
       top: 0;
       right: 0;
